Prevent notes overlapping content

--- a/resources/scss/components/_notes.scss
+++ b/resources/scss/components/_notes.scss
@@ -45,3 +45,7 @@
 		left: $sidebar-width;
 	}
 }
+
+.show-note {
+	margin-bottom: 133px;
+}
